# crm

./: Cargo.toml  README.md
agents/: Cargo.toml
agents/src/: lib.rs
connections-importer/: Cargo.toml
connections-importer/src/: main.rs
migrations/: 0001_initial.up.sql  20240502000000_add_company_id_to_contacts.sql
src/: main.rs
src/endpoints/: mod.rs  speech.rs
