[package]
name = "agents"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
dotenv = "0.15"
indicatif = "0.17"
rig-core = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.6", features = ["runtime-tokio", "postgres"] }
thiserror = "1.0"
tokio = { version = "1", features = ["macros"] }
tracing = "0.1"
tracing-subscriber = "0.3"
