[package]
name = "connections-importer"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio-rustls", "macros"] }
shuttle-runtime = "0.35"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
csv = "1.3"
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
tracing-subscriber = { version = "0.3", features = ["fmt"] }
tracing = "0.1"
indicatif = "0.16"